<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Agendamento</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="nome_">Nome:</string>
    <string name="telefone_">Telefone:</string>
    <string name="anota_es_">Anotações:</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="este_texto_de_multiplas_linhas">Este texto é de multiplas linhas</string>
    <string name="e_mail">E-mail</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="_99_9999_9999">(99) 9999.9999</string>
    <string name="nome_email_com">nome@email.com</string>

</resources>